# PySDL3

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  callback.py  example.py  gpu.py  index.html  opengl.py  pyproject.toml  setup.py  setup_custom_libraries.py  shader.py  template.py
.github/workflows/: generate-docs.yml  generate_docs.yml  pypi_deploy.yml  python-publish.yml  run_tests.yml
docs/: conf.py  index.rst  install.rst  requirements.txt
docs/modules/: index.rst  sdl3.rst  sdl3_image.rst  sdl3_mixer.rst  sdl3_net.rst  sdl3_rtf.rst  sdl3_shadercross.rst  sdl3_ttf.rst
sdl3/: SDL.py  SDL_assert.py  SDL_asyncio.py  SDL_atomic.py  SDL_audio.py  SDL_bits.py  SDL_blendmode.py  SDL_camera.py  SDL_clipboard.py  SDL_cpuinfo.py  SDL_dialog.py  SDL_endian.py  SDL_error.py  SDL_events.py  SDL_filesystem.py  SDL_gamepad.py  SDL_gpu.py  SDL_guid.py  SDL_haptic.py  SDL_hidapi.py  SDL_hints.py  SDL_image.py  SDL_init.py  SDL_iostream.py  SDL_joystick.py  SDL_keyboard.py  SDL_keycode.py  SDL_loadso.py  SDL_locale.py  SDL_log.py  SDL_main.py  SDL_main_impl.py  SDL_messagebox.py  SDL_metal.py  SDL_misc.py  SDL_mixer.py  SDL_mouse.py  SDL_mutex.py  SDL_net.py  SDL_pen.py  (+28 more)
tests/: TEST_coverage_evaluation.py  TEST_custom_libraries.py  TEST_init.py  TEST_locale.py  TEST_module_analyzer.py  TEST_runner.py  TEST_version.py  TEST_video.py  __init__.py
