[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PySDL3"
description = "A pure Python wrapper for SDL3."
readme = "README.md"
authors = [
    {name = "Yusuf Rençber", email = "aermoss.0@gmail.com"}
]
dependencies  = ["requests"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Repository = "https://github.com/Aermoss/PySDL3"
Issues = "https://github.com/Aermoss/PySDL3/issues"

[tool.setuptools]
packages = ["sdl3", "sdl3.bin", "sdl3.bin.windows-x86_64", "sdl3.bin.linux-x86_64", "sdl3.bin.linux-aarch64"]
include-package-data = true

[tool.setuptools.package-data]
"sdl3.bin" = ["*.dll", "*.so", "*.dylib"]
"sdl3" = ["*.py"]

[tool.setuptools.exclude-package-data]
"sdl3" = ["__docs__.py"]

[tool.setuptools.dynamic]
version = {attr = "sdl3.__version__"}