[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PySDL3"
description = "A pure Python wrapper for SDL3."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Yusuf Rençber", email = "aermoss.0@gmail.com"}
]
dependencies = ["requests", "aiohttp", "packaging"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.urls]
Repository = "https://github.com/Aermoss/PySDL3"
Issues = "https://github.com/Aermoss/PySDL3/issues"

[tool.setuptools]
packages = ["sdl3"]
include-package-data = true

[tool.setuptools.package-data]
"sdl3" = ["*.py"]

[tool.setuptools.dynamic]
version = {attr = "sdl3.__version__"}